Added list styling

--- a/theme.html
+++ b/theme.html
@@ -286,7 +286,28 @@
             float: right;
             padding: 3px 15px;
         }
-        
+
+
+        .bodytext UL
+        {
+        list-style-type: square;
+        }
+
+        .bodytext UL LI,
+        .bodytext OL LI
+        {
+        margin: 0px;
+        padding: 5px 10px;
+        border-bottom: 1px solid #444444;
+        border-left: 1px solid #444444;
+        }
+
+        .bodytext UL LI:last-child,
+        .bodytext OL LI:last-child
+        {
+        border-bottom: 0px none !important;
+        }
+
     </style>
     <title>
         {PageTitle}
